# cs6868-concurrent-programming

./: .gitignore  Makefile  TreeLock.ml  dune  dune-project
_build/: .digest-db  log
_build/default/: PetersonNode.ml
_build/default/.dune/: configurator
_build/default/.merlin-conf/: exe-test
_build/default/.test.eobjs/: dune__exe.ml-gen  dune__exe__Test.impl.d  dune__exe__Test.intf.d  dune__exe__TreeLock.intf.d
_build/default/.test.eobjs/byte/: dune__exe.cmi  dune__exe__Test.cmi  dune__exe__Test.cmti  dune__exe__TreeLock.cmti
_build/default/.test.eobjs/native/: dune__exe.cmx  dune__exe__Test.cmx  dune__exe__TreeLock.cmx
assignment_1/: README.md  Test.ml  TreeLock.ml
assignment_1/_build/: .db  .digest-db  log
assignment_1/_build/default/: PetersonNode.mli  Test.ml  TreeLock.ml  TreeLock.mli
assignment_1/_build/default/.dune/: configurator.v2
assignment_1/_build/default/.test.eobjs/: dune__exe__PetersonNode.impl.d  dune__exe__PetersonNode.intf.d  dune__exe__Test.impl.all-deps  dune__exe__Test.impl.d  dune__exe__TreeLock.impl.all-deps  dune__exe__TreeLock.impl.d
assignment_1/_build/default/.test.eobjs/byte/: dune__exe.cmo  dune__exe.cmt  dune__exe__PetersonNode.cmi  dune__exe__PetersonNode.cmti  dune__exe__TreeLock.cmi
assignment_1/_build/default/.test.eobjs/native/: dune__exe__PetersonNode.cmx  dune__exe__Test.cmx
assignment_2/: Bonus.ml  Makefile  README.md  Snapshot.ml  Snapshot.mli  TSAN_REPORT.md  dune  dune-project  qcheck_lin_snapshot.ml  qcheck_stm_snapshot.ml  test_manual.ml
assignment_3/: BatchQueue.ml  BatchQueue.mli  Makefile  README.md  dune  dune-project  qcheck_lin_batch_queue.ml  qcheck_stm_batch_queue.ml  test_manual.ml
assignment_4/: README.md  barrier.ml  barrier.mli  condition.ml  condition.mli  dune  dune-project  mutex.ml  mutex.mli  qcheck_stm_mutex.ml  semaphore.ml  semaphore.mli  test_manual.ml
assignment_4/golike_unicore_select/: Makefile  chan.ml  chan.mli  dune  ivar.ml  ivar.mli  promise.ml  promise.mli  sched.ml  sched.mli  select.ml  select.mli  trigger.ml  trigger.mli
